2005-05-07  Shaun McCance  <shaunm@gnome.org>

	* data/Makefile.am:
	* data/yelp.js:
	* src/yelp-db-pager.c:
	* stylesheets/db2html.xsl.in:
	- Added yelp.js, magic courtesy of Stuart Langridge
	- Cleaned up some margins and padding with the linktrail

2005-05-06  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	- Depend on gdu 0.3.1

	* src/yelp-gecko-utils.cpp:
	- Set a minimum font size of 8pt

	* stylesheets/db2html.xsl.in:
	- Played with navbar and linktrail

2005-05-01  Shaun McCance  <shaunm@gnome.org>

	* NEWS
	* configure.in:
	- Version 2.10.0

	* po/ChangeLog:
	- Removed stray CVS conflict marker

2005-04-30  Paolo Borelli  <pborelli@katamail.com>

	yelp-bookmarks.c: constify some vars.
	yelp-settings.c: ditto.
	yelp-window.c: ditto.

2005-04-14  Abduxukur Abdurixit <abduxukur.abdurixit@t-systems.ch>

	* configure.in: Added "ug" to ALL_LINGUAS.

2005-04-08  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in:  Define MOZILLA_INTERNAL_API, which is necessary since
	mozilla 1.8b2, because Yelp uses internal strings.
	* src/yelp-gecko-utils.cpp: Include config.h here.
	Fixes bug #173053.

2005-04-01  Adi Attar  <aattar@cvs.gnome.org>

	* configure.in: Added "xh" to ALL_LINGUAS.

2005-03-31  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

2005-03-10  Christian Persch  <chpe@cvs.gnome.org>

	* src/yelp-db-pager.c: (walker_walk_xml):
	* src/yelp-io-channel.c:
	* src/yelp-man-parser.c: (parser_escape_tags):
	* src/yelp-toc-pager.c: (toc_process_pending):
	* src/yelp-window.c: (window_populate), (window_do_load_pager),
	(pager_finish_cb):
	* src/yelp-xslt-pager.c: (xslt_yelp_cache):

	Don't use C++ comments in C files. Fixes the build with
	--enable-debug.

2005-03-10  Christian Persch  <chpe@cvs.gnome.org>

	* .cvsignore:
	R INSTALL:
	* autogen.sh:
	* configure.in:
	* data/.cvsignore:
	* po/POTFILES.in:
	* src/.cvsignore:
	* src/Makefile.am:
	* stylesheets/.cvsignore:
